--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,42 +1,96 @@
 body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
 }
 .container {
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(180deg, rgba(69, 236, 42, 0.60) 0%, rgba(106, 255, 139, 0.90) 100%);
+    width: 100%;
+    height: 100%;
+    background: rgb(183, 255, 217);
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .logo {
-    width: 50%; 
+    margin-top: 10vh;
+    width: 100%; 
     text-align: center;
 }
 
 .login-container {
-    width: 50%;
+    width: 100%;
+    text-align: center;
 }
-
+.Message{
+    color:#04286D;
+    margin-top: 10vh;
+    margin-bottom: 2.5vh;
+    width:24em;
+    height: 5em;
+    background-color: #2EFB67;
+    border-radius: 0.5em;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15), 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
 form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    height: 40vh;
+    text-align: center;
+    width: 100%;
     
 }
+input{
+    text-align: center;
+    width: 15em;
+    height: 2.5em;
+    font-size: 1.25em;
+    margin: 0.5em;
 
-button {
-    background: linear-gradient(180deg, #F95656 0%, #93381B 100%);
+    border-radius: 0.5em;
+    border-color: #05c435;
+    background-color: #cecece;
+    box-shadow: 0 0 10px #40fcbc; 
+}
+
+button:hover{
+    font-weight: bold;
+}
+.click-button {
+    background:#05c435;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    width: 25%;
+    border-radius: 0.5em;
+    height: 2.5em;
+    width: 16em;
     border: none;
     color: white;
     margin: 1em;
     line-height: 2.5em;
+    font-size: 1.5em;
+}
+.click-button:hover{
+    font-weight: bold;
+}
+.red-button{
+    background: red;
+}
+.messages{
+    color: rgb(172, 9, 9);
+    font-size: 0.75em;
+    margin: 0.5em;
+}
+#img{
+    width: 35%;
+}
+.fill{
+    width: 100%;
+    height: 30vh;
+}
+#move_login{
+    width: 100%;
+    height: 10vh;
+    margin-bottom: 20vh;
 }
